feat: update to the newest version of booking service
